# rss-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: categories.yaml  feeds.example.yaml  report_profiles.yaml  schedules.yaml
docs/: mcp.md
fixtures/: entries.json  external_search_items.json
fixtures/expected_reports/: daily.md  monthly.md  weekly.md
fixtures/feeds/: ai_agent.atom  finance.rss  malformed.rss  opensource.rss
src/rss_service/: __main__.py  app.py  backup.py  errors.py  logging.py  models.py  settings.py
src/rss_service/api/: deps.py  routes_entries.py  routes_external.py  routes_feeds.py  routes_health.py  routes_reports.py
src/rss_service/cli/: main.py
src/rss_service/db/: connection.py  migrations.py  repository.py
src/rss_service/feeds/: dedupe.py  fetcher.py  normalizer.py  opml.py  parser.py  service.py
src/rss_service/mcp/: server.py  tools.py
src/rss_service/reports/: generator.py  periods.py  renderer.py  sources.py  writer.py
tests/: conftest.py
tests/contract/: test_api_contract.py
tests/mcp/: test_http_server.py  test_tool_inventory.py
tests/snapshot/: test_daily_report_snapshot.py  test_monthly_report_snapshot.py  test_weekly_report_snapshot.py
tests/unit/: test_dedupe.py  test_feed_results.py  test_feed_test_proxy.py  test_fetcher.py  test_normalizer.py  test_parser.py  test_periods.py  test_settings.py  test_sources.py  test_writer_and_migrations.py
(+7 files in other folders)
