[project]
name = "rss-service"
version = "0.1.0"
description = "Headless RSS and search briefing service for Hermes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "fastapi>=0.116.0",
  "feedparser>=6.0.11",
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "respx>=0.22.0",
  "ruff>=0.12.0",
  "types-python-dateutil>=2.9.0.20250516",
  "types-PyYAML>=6.0.12.20250516",
]

[project.scripts]
rss-service = "rss_service.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["feedparser.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
